--- a/vislexdec-vp.html
+++ b/vislexdec-vp.html
@@ -5,6 +5,9 @@
     <script src="jspsych-6.0.5/jspsych.js"></script>
     <script src="jspsych-6.0.5/plugins/jspsych-html-keyboard-response.js"></script>
     <link href="jspsych-6.0.5/css/jspsych.css" rel="stylesheet" type="text/css"></link>
+
+    <-- Uil OTS scripts -->
+    <script src="stimuli.js"></script>
   </head>
   <body></body>
 </html>
