--- a/vislexdec-vp.html
+++ b/vislexdec-vp.html
@@ -2,13 +2,20 @@
 <html>
   <head>
     <title>My experiment</title>
-    <script src="jspsych-6.0.5/jspsych.js"></script>
-    <script src="jspsych-6.0.5/plugins/jspsych-html-keyboard-response.js"></script>
-    <link href="jspsych-6.0.5/css/jspsych.css" rel="stylesheet" type="text/css"></link>
+    <script src="jsPsych-6.1.0/jspsych.js"></script>
+    <script src="jsPsych-6.1.0/plugins/jspsych-html-keyboard-response.js"></script>
+    <link href="jsPsych-6.1.0/css/jspsych.css" rel="stylesheet" type="text/css"/>
 
-    <-- Uil OTS scripts -->
+    <!-- Uil OTS scripts -->
     <script src="stimuli.js"></script>
   </head>
   <body></body>
+  <script>
+    var stimuli = pick_random_group();
+
+    // remove logs when the stimuli variable is clear
+    console.log("group " + stimuli.group_name);
+    console.log("stim_table = " + stimuli.table);
+  </script>
 </html>
 
