--- a/vislexdec-vp.html
+++ b/vislexdec-vp.html
@@ -11,6 +11,9 @@
     <script src="stimuli.js"></script>
     <script src="globals.js"></script>
     <!-- Uil OTS scripts -->
+    <style>
+    .stimulus { font-size: 30px; }
+    </style>
   </head>
   <body></body>
   <script>
