--- a/vislexdec-vp.html
+++ b/vislexdec-vp.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My experiment</title>
-    <script src="jsPsych-6.1.0/jspsych.js"></script>
-    <script src="jsPsych-6.1.0/plugins/jspsych-html-keyboard-response.js"></script>
-    <script src="jsPsych-6.1.0/plugins/jspsych-html-button-response.js"></script>
-    <link href="jsPsych-6.1.0/css/jspsych.css" rel="stylesheet" type="text/css"/>
+    <title>Primed Lexical Decision Experiment</title>
+    <script src="https://web-experiments.lab.hum.uu.nl/jspsych/6.1.0/jspsych.js"></script>
+    <script src="https://web-experiments.lab.hum.uu.nl/jspsych/6.1.0/plugins/jspsych-html-keyboard-response.js"></script>
+    <script src="https://web-experiments.lab.hum.uu.nl/jspsych/6.1.0/plugins/jspsych-html-button-response.js"></script>
+      <link href="https://web-experiments.lab.hum.uu.nl/jspsych/6.1.0/css/jspsych.css" rel="stylesheet" type="text/css"/>
 
     <!-- Uil OTS scripts -->
     <script src="stimuli.js"></script>
