"And another useful instruction..." + '//following suggestions in a comment'

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     
     var well_done_screen = {
       type: 'html-button-response',
-      stimulus: POST_PRACTICE_INSTRUCTION, 
+      stimulus: PRE_TEST_INSTRUCTION, 
       choices: [OK_BUTTON_TEXT],
       response_ends_trial: true
     };
