We may need to discuss this issue further... pushing one of the ways we could have the situation in which: - The Target word is presented for only 1000 ms - Yet the target word phase deadtime for making a response totals 2000ms.
To discuss:
- Code-wise/globals.js and strcuture
- Feedback-wise, eg.
   - do we want dead-time feedback in practice? (please respond as fast
   as you can...")
   - or do we want to add instruction text to meake clear that if the
   feedback (incorrect) comes up without having pressed a key, the
   participant is too slow?

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         jsPsych.timelineVariable('word', true)+"</p>"; },
       choices: ['z','m'],
       trial_duration: WORD_DURATION,
-      post_trial_gap: WORD_GAP_DURATION,
+      post_trial_gap: RESPONSE_DURATION_OPTION_ONE, //o my...
       prompt: "",
       data: {
         word_type: jsPsych.timelineVariable('item_type'),
