making the <kbd>style explicit</kbd>...

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <script src="globals.js"></script>
     <script src="instructions.js"></script>
     <style>
+
     .stimulus { font-size: 30px; }
+    kbd {
+      border-radius: 2px;
+      padding: 2px;
+      border: 1px solid black;
+    }
+    
     </style>
   </head>
   <body></body>
