--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
             "<h1>Keyboard checks</h1><BR>" +
             "<p>Let's figure out what keyboard you use. A couple of well known layouts will be shown with a caption</p>" +
             "<p>Please have a look at the following layouts and remember the one that look most like the keyboard you're using.</p>" + "Click 'next' to proceed and 'back' to review layouts",
-            'QWERTY: <img src="./images/QWERTY.png"></img>',
-            'AZERTY: <img src="./images/AZERTY.png"></img>',
-            'DVORAK: <img src="./images/DVORAK.png"></img>',
-            'QWERTZ: <img src="./images/QWERTZ.png"></img>',
+            'QWERTY:<BR><BR><img src="./images/QWERTY.png"></img>',
+            'AZERTY:<BR><BR><img src="./images/AZERTY.png"></img>',
+            'DVORAK:<BR><BR><img src="./images/DVORAK.png"></img>',
+            'QWERTZ:<BR><BR><img src="./images/QWERTZ.png"></img>',
             'Other: If you have your own, custom (mechanical) keyboard, this will be dealt with in the next step...'
             ],
         show_clickable_nav: true
