--- a/index.html
+++ b/index.html
@@ -373,10 +373,10 @@
     
     // best practice to have user I/O first
     timeline.push(start_screen);
-    //timeline.push(test_audio_start);
+    timeline.push(test_audio_start);
     
     //timeline.push(test_audio_single);
-    //timeline.push(test_audio_looped);
+    timeline.push(test_audio_looped);
     // todo: keyboard checks:
 
             // first a non-survey item tot test
