this should fix a severe bug in master. fingers crossed

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         pages: [
             "<h1>Keyboard layout</h1><BR>" +
             "<p>Let's figure out what keyboard you use. A couple of well known layouts will be shown with a caption</p>" +
-            "<p>Please have a look at the following layouts and remember the one that look most like the keyboard you're using.</p>" + "Click 'next' to proceed and 'back' to review layouts. You don't have to select them here, just look at them...",
+            "<p>Please have a look at the following layouts and remember the one that looks most like the keyboard you're using.</p>" + "Click 'next' to proceed and 'back' to review layouts. You don't have to select them here, just look at them...",
             '1/5 <b>QWERTY</b>:<BR><BR><img src="./images/QWERTY.png"></img>',
             '2/5 <b>AZERTY</b>:<BR><BR><img src="./images/AZERTY.png"></img>',
             '3/5 <b>DVORAK</b>:<BR><BR><img src="./images/DVORAK.png"></img>',
