Fixed typo that was corrected in latest utils

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     // contents of this method
     window.addEventListener('load', function() {
         var stimuli = pickRandomGroup();
-        stimuli.table = uil.randomisation.randomizeStimuli(stimuli.table, MAX_SUCCEEDING_ITEMS_OF_TYPE, 'item_type')
+        stimuli.table = uil.randomization.randomizeStimuli(stimuli.table, MAX_SUCCEEDING_ITEMS_OF_TYPE, 'item_type')
 
         // data one would like to add to __all__ trials, according to:
         // https://www.jspsych.org/overview/data/
